Fri Nov 16 16:26:57 2007  Shugo Maeda  <shugo@ruby-lang.org>

	* include/ruby/ruby.h: added some declarations for event hooks.

	* lib/profile.rb: set VM::InstructionSequence.compile_option.

Fri Nov 16 11:16:41 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/yaml/rubytypes.rb (String#is_binary_data?): use Integer#fdiv.

Fri Nov 16 03:36:01 2007  why the lucky stiff  <why@ruby-lang.org>

	* ext/syck/rubyext.c: Node#value defined twice.

	* lib/yaml/: several method redefinitions causing warnings.

Fri Nov 16 03:01:00 2007  why the lucky stiff  <why@ruby-lang.org>

	* lib/yaml/types.rb: Likewise, pass self to YAML::quick_emit.

Fri Nov 16 02:51:59 2007  why the lucky stiff  <why@ruby-lang.org>

	* lib/yaml.rb (quick_emit): use combination of object_id and hash to
	  identify repeated object references, since GC will reuse memory of
		objects during output of YAML. [ruby-Bugs-8548] [ruby-Bugs-3698]

Thu Nov 15 19:49:03 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/curses/extconf.rb: check macro if cannot find func.
	  [ruby-list:44224]

Thu Nov 15 18:04:06 2007  Tanaka Akira  <akr@fsij.org>

	* tool/compile_prelude.rb: fix TMP_RUBY_PREFIX for relative load path
	  environment.

Thu Nov 15 17:28:21 2007  Tanaka Akira  <akr@fsij.org>

	* tool/compile_prelude.rb: absolute path may not start with a slash.
	  pointed by usa.

Thu Nov 15 17:07:54 2007  Tanaka Akira  <akr@fsij.org>

	* tool/compile_prelude.rb: fix first substitution.
	  use constant for prefix.
	  pointed by Richard Kilmer.

Thu Nov 15 14:29:56 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (prereq): added auto generated sources.  [ruby-dev:32280]

Thu Nov 15 12:31:13 2007  Tanaka Akira  <akr@fsij.org>

	* tool/compile_prelude.rb: use constant for prefix.

Thu Nov 15 12:24:39 2007  Tanaka Akira  <akr@fsij.org>

	* tool/compile_prelude.rb: use simple template system for source
	  code generation.

Thu Nov 15 12:19:14 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>
